# SchemaScribe

./: .gitignore  .python-version  README.md  config.yaml  create_db.py  create_demo_db.py  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
data-scribe/: app.py  main.py  prompts.py
data-scribe/core/: catalog_generator.py  interfaces.py
data-scribe/utils/: logger.py  writers.py
data_scribe/: app.py  main.py  prompts.py
data_scribe/components/db_connectors/: __init__.py  duckdb_connector.py  mariadb_connector.py  postgres_connector.py  snowflake_connector.py  sql_base_connector.py  sqlite_connector.py
data_scribe/components/llm_clients/: __init__.py  google_client.py  ollama_client.py  openai_client.py
data_scribe/components/writers/: __init__.py  confluence_writer.py  dbt_markdown_writer.py  dbt_yaml_writer.py  json_writer.py  markdown_writer.py  mermaid_writer.py  notion_writer.py  postgres_comment_writer.py
data_scribe/core/: catalog_generator.py  db_workflow.py  dbt_catalog_generator.py  dbt_parser.py  dbt_workflow.py  exceptions.py  factory.py  interfaces.py  lineage_workflow.py  workflow_helpers.py
data_scribe/tests/: conftest.py  test_db_workflow_sqlite.py  test_dbt_workflow_jaffle.py
data_scribe/tests/integration/: test_db_workflow.py  test_dbt_workflow.py  test_lineage_workflow.py
data_scribe/tests/unit/: test_connectors.py  test_writers.py
data_scribe/utils/: config.py  logger.py  utils.py  writers.py
jaffle_shop_mini/: dbt_project.yml
jaffle_shop_mini/models/: customers.sql  schema.yml
schema_scribe/: main.py  prompts.py
schema_scribe/components/db_connectors/: duckdb_connector.py  mariadb_connector.py  postgres_connector.py  snowflake_connector.py  sql_base_connector.py  sqlite_connector.py
schema_scribe/components/llm_clients/: google_client.py  ollama_client.py  openai_client.py
schema_scribe/components/writers/: confluence_writer.py  dbt_markdown_writer.py  dbt_yaml_writer.py  json_writer.py  markdown_writer.py  mermaid_writer.py  notion_writer.py  postgres_comment_writer.py
schema_scribe/core/: catalog_generator.py  db_workflow.py  dbt_catalog_generator.py  dbt_parser.py  dbt_workflow.py  interfaces.py  lineage_workflow.py  workflow_helpers.py
schema_scribe/server/: main.py
schema_scribe/server/static/: index.html
schema_scribe/services/: catalog_generator.py  lineage_generator.py
schema_scribe/utils/: config.py  utils.py
schema_scribe/workflows/: lineage_workflow.py
(+17 files in other folders)
